--- a/Module2/home_work/05_hw.md
+++ b/Module2/home_work/05_hw.md
@@ -26,9 +26,17 @@
 a = int(input("a: "))
 b = int(input("b: "))
 c = int(input("c: "))
-
-# TODO: you code here...
-
+if a >= b and a >= c and b >= c:
+    print(c, b, a)
+elif a <= b and a >= c and b >= c:
+    print(c, a, b)
+elif a <= b and a <= c and b <= c:
+    print(a, b, c)
+elif a >= b and a >= c and b <= c:
+    print(b, c, a)
+elif a >= b and a <= c and b <= c:
+    print(b, a, c)
+else:
 print(a, b, c)
 ```
 
